--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -8,3 +8,16 @@
   background-position: center;
   color: black;
 }
+
+/* to remove scrollbar */
+::-webkit-scrollbar {
+  width: 0px;
+}
+
+::-webkit-scrollbar-thumb {
+  background: rgba(136, 136, 136, 0.281)
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background: #555
+}
